@@ -21,7 +21,10 @@ update-manager (1:0.93.18) intrepid; urgency=low
       version information (disabled by default, LP: #189406)
   * DistUpgrade/DistUpgradeQuirks.py:
     - add intrepidPreUpgrade() handler that detects
-      fglrx in xorg.conf and warns about it before the upgrade
+      fglrx in xorg.conf and warns about it before the upgrade 
+    - consolidate the various quirks into this file
+    - add check for the nvidia-glx-71 and nvidia-glx-96 drivers 
+      and warn if they will be required
   
  --
 
